Big rename! Now it's called logbind.

--- a/flit.ini
+++ b/flit.ini
@@ -1,7 +1,7 @@
 [metadata]
-module = mystique
+module = logbind
 author = Caleb Hattingh
 author-email = caleb.hattingh@gmail.com
-home-page = https://github.com/cjrh/mystique
+home-page = https://github.com/cjrh/logbind
 classifiers = License :: OSI Approved :: Apache Software License
 
