--- a/flit.ini
+++ b/flit.ini
@@ -12,9 +12,7 @@ classifiers = License :: OSI Approved :: Apache Software License
               Programming Language :: Python :: 3.6
               Operating System :: OS Independent
 description-file=README.rst
-requires =
-    typing; python_version < '3.5'
-dev-requires =
-    pytest
-    pytest-cov
-    wheel
+requires = typing; python_version < '3.5'
+dev-requires = pytest
+               pytest-cov
+               wheel
